# extras_rsi

./: .gitignore  CMakeLists.txt  HOWTO-NG_MONITOR.md  HOWTO-RSI.md  HOWTO-download.md  HOWTO-socketpool.md  HOWTO-upload.md  HOWTO-vendor.md  HOWTO.md  INSTALL.md  LICENSE.md  README.md  changelog.md  cplusplusorg.freeformjs.imploded.zip_packed  list.txt  mkpkg.py  send.txt  send.txt_uploaded  send_downloaded.txt
.github/workflows/: cmake.yml
assets/badkitty/: note.txt  src.zip_imploded.zip_packed.txt.recevied_copy  src.zip_imploded.zip_packed.txt.recevied_copy (2nd example)
cmake/: utils.cmake
data/: b1.hex  cplusplusorg.freeformjs.imploded.zip.sh  send.txt  src.zip_imploded.zip_packed.txt.recevied_copy  src.zip_imploded.zip_packed.txt.sent_copy
data/cplusplusorg.freeformjs.imploded.zip.dir/src/: 401.html  404.html  index.html  styles.css
data/d2/: d2.zip_imploded.zip_packed.txt
doc-pak/: README.md
include/cpp_starter/: version.hpp
include/extras_rsi/: exceptions.hpp  rsiexception.hpp  subsystem.hpp  version.hpp
include/extras_rsi/gadgets/: Spinner.hpp  StatusBar.hpp
include/extras_rsi/invocation/: Vendor.hpp
include/extras_rsi/remote/: CausalityInterface.hpp  ClientServer.hpp  (+18 more)
include/rsi/: exceptions.hpp  subsystem.hpp  version.hpp
instances/: downloader_client.cpp  downloader_server.cpp  kill_servers.cpp  main.cpp  ng_monitor.cpp  rsi_client.cpp  rsi_server.cpp  socketpool_client.cpp  socketpool_server.cpp  uploader_client.cpp  uploader_server.cpp  vendor_client.cpp  vendor_server.cpp
instances/ng/: monitor.cpp  ng_client.cpp  ng_server.cpp  rsi_client.cpp  rsi_server.cpp  vendor_client.cpp
instances/prototype/: socketpool_client.cpp
instances/services/: uploader_server.cpp
src/: exceptions.cpp
src/bin2hex/: ConvertFile.cpp  ConvertLine.cpp
src/downloader/: Client.cpp  Server.cpp  downloader_client.cpp
src/gadgets/: ColorBar.cpp  Spinner.cpp  StatusBar.cpp
src/game/: ChessGame.cpp
src/parcel/: Exceptions.cpp  Packed.cpp  Parcel.cpp  ParcelImploder.cpp  Wrap.cpp
src/remote/: ClientServer.cpp  Invocation.cpp  Parameters.cpp  RemoteService.cpp  Service.cpp  Sessions.cpp  Vendor.cpp
src/requests/: Compilation.cpp  Compiler.cpp  CompilerTypeFour.cpp  CompilerTypeOne.cpp  CompilerTypeThree.cpp  CompilerTypeTwo.cpp  ServiceType.cpp
src/services/: ServiceType.cpp  Sessions.cpp
src/socketpool/: Client.cpp  Paraneters.cpp  Server.cpp  SocketPool.cpp  Transfer_Client.cpp  Transfer_Server.cpp
src/sockets/: Client.cpp  ColorBar.cpp  Paraneters.cpp  Pool.cpp  RequestType.cpp  Server.cpp  SocketPool.cpp  Spinner.cpp  Status.cpp  StatusBar.cpp  StatusLine.cpp  Transfer.cpp
src/subsystem/: configure_serversocket.cpp  connect_to_server.cpp  deadman_switch.cpp  read_string.cpp  send_file.cpp  send_string.cpp  write_file.cpp
src/uploader/: Client.cpp  Downloader.cpp  Lock_Server.cpp  Parameters.cpp  Server.cpp  Transfer.cpp  Uploader.cpp  Vendor.cpp  uploader_client.cpp
test/: mock_ChessGame.cpp  test_ChessGame.cpp
test/bin2hex/: mock_ConvertByte.cpp  mock_ConvertFile.cpp  mock_ConvertLine.cpp  test+ConvertFile.cpp  test_ConvertFile.cpp  test_ConvertLine.cpp  test_Hex2Bin.cpp
test/chessgame/: mock_ChessGame.cpp  test_ChessGame.cpp
test/data/: test_BadCRC.cpp  test_ColorBar.cpp
test/downloader/: dock_Downloader_sema.cpp  test_DownloaderClient.cpp  test_DownloaderServer.cpp
test/other/: dock_Spinner.cpp  dock_StatusBar.cpp  mock_Spinner.cpp  mock_StatusBar.cpp  test_ColorBar.cpp  test_Spinner.cpp  test_StatusBar.cpp
test/parcel/: mock_Parcel.cpp  mock_Parcel_v1.cpp  mock_Parcel_v2.cpp  mock_Wrap.cpp  mock_Wrap2.cpp  mock_Wrap3.cpp  mock_Wrap4.cpp  test_Parcel.cpp  test_Parcel2.cpp  test_Parcel_v1.cpp  test_Wrap4.cpp
test/portauthority/: dock_PortAuthority.cpp
test/remote/: dock_CausailtyInterface.cpp  dock_ServiceInterface.cpp  dock_ServiceTypeCompiler.cpp  dock_Session.cpp  mock_ServiceInterface.cpp  test_ServiceInterface.cpp  test_Session.cpp
test/requests/: dock_CompilerTypeFour.cpp  dock_CompilerTypeOne.cpp  dock_CompilerTypeThree.cpp  dock_CompilerTypeTwo.cpp  mock_Compiler.cpp  mock_CompilerTypeFour.cpp  mock_CompilerTypeOne.cpp  mock_CompilerTypeThree.cpp  mock_CompilerTypeTwo.cpp  test_CompilerTypeFour.cpp  test_CompilerTypeThree.cpp  test_CompilerTypeTwo.cpp
test/semaphores/: dock_Semaphores.cpp  dock_Semaphores1.cpp
test/services/: dock_ServiceTypeCompiler.cpp  dock_Session.cpp  mock_CompilerTypeFour.cpp  mock_ServiceTypeCompiler.cpp  mock_Session.cpp  test_Session.cpp
test/socketpool/: dock_PoisonedFish.cpp  dock_SocketParameters.cpp  dock_SocketsPool.cpp  mock_PoisonedFish.cpp  mock_SocketParameters.cpp  mock_SocketsPool.cpp  test_SocketParameters.cpp  test_SocketPool.cpp  test_SocketPoolClient.cpp  test_SocketPoolServer.cpp
test/sockets/: dock_FileBlock.cpp  mock_Burst.cpp  mock_Downloader.cpp  mock_FileBlock.cpp  mock_LineBlock.cpp  mock_Parameters.cpp  mock_PortAuthority.cpp  mock_Semaphores.cpp  mock_Semaphores1.cpp  mock_Semaphores2.cpp  mock_Semaphores3.cpp  mock_SocketPool.cpp  mock_SocketsPool.cpp  mock_Spinner.cpp  mock_Status.cpp  mock_StatusBar.cpp  mock_StatusLine.cpp  mock_Transmit.cpp  test_ColorBar.cpp  test_Parameters.cpp  test_Parcel2.cpp  test_SocketPool.cpp  test_Spinner.cpp  test_Status.cpp  test_StatusBar.cpp  test_StatusLine.cpp
test/socketspool/: mock_Parameters.cpp  mock_PortAuthority.cpp  mock_SocketsPool.cpp
test/subsystem/: mock_subsystem.cpp
test/unittesting/: killAllServers.cpp  main.cpp
test/uploader/: dock_Uploader.cpp  dock_UploaderParameters.cpp  dock_Uploader_sema.cpp  mock_Downloader(sema).cpp  mock_Downloader_sema.cpp  mock_Parameters.cpp  mock_Uploader(sema).cpp  mock_Uploader.cpp  mock_Uploader0.cpp  mock_Uploader2.cpp  mock_Uploader3.cpp  mock_Uploader4.cpp  mock_UploaderParameters.cpp  mock_Uploader_sema.cpp  mock_vendor.cpp  test_Downloader.cpp  test_Downloader2.cpp  test_Parameters.cpp  test_Uploader.cpp  test_Uploader2.cpp  test_Uploader3.cpp  test_UploaderClient.cpp  test_UploaderParameters.cpp  test_UploaderServer.cpp  test_Vendor.cpp  test_uploader.cpp
(+264 files in other folders)
